--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     font-size: 16px;
     font-family: Arial, sans-serif;
     font-weight: bold;
+    padding-top: 75px;
 }
 
 ul {
@@ -26,6 +27,10 @@ h1 {
     color: #bfbfbf;
 }
 
+.navigation {
+    margin-bottom: 60px;
+}
+
 .navigation a {
     text-decoration: none;
 }
@@ -44,34 +49,50 @@ h1 {
     border-radius: 3px;
 }
 
+ul:not(.open) >li:first-child >a {
+    border-radius: 3px 0 0 3px;
+}
+
+ul:not(.open) >li:last-child >a {
+    border-radius:  0 3px 3px 0;
+}
+
 .food-menu {
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
 }
 
-.food-menu li {
-    position: relative;
-}
-
 .food a {
     display: inline-block;
-    padding: 15px;
+    padding: 15px 30px;
     color: #fff;
     border-left: 1px solid #3f4852;
     border-right: 1px solid #3f4852;
 }
 
-.food .open a {
+.navigation .open a {
     color: #2a3644;
     width: 210px;
-}
- 
-.food .open a {
     border: none;
+    padding: 11.5px 20px
 }
 
-.open li:last-child a {
+.open a:not(.service a) {
+    border-bottom: 1px solid #b9bdc1;
+}
+
+.row:not(:first-child):nth-child(2n)
+
+.navigation a:hover {
+    color: #fd8612;
+}
+
+.navigation .open a:hover {
+    color: #fd8612;
+}
+
+.open li:last-child> a {
     border: none;
 }
 
@@ -85,7 +106,8 @@ h1 {
     padding: 15px;
     color: #fff;
     border-left: 1px solid #3f4852;
-    border-right: 1px solid #3f4852;
+    width: 100%;
+    text-align: center;
 }
 
 .machinery-thinks {
@@ -94,7 +116,7 @@ h1 {
 }
 
 .machinery-thinks li {
-    flex: 1;
+    flex-grow: 1;
 }
 
 .main {
@@ -103,6 +125,7 @@ h1 {
     border-radius: 3px;
     background-color: #2a3644;
     padding: 0 30px;
+    align-items: center;
 }
 
 .main a {
@@ -111,13 +134,17 @@ h1 {
     color: #fff;
 }
 
+.neighborhood:nth-child(1n) a {
+    border-right: none;
+}
+
 .picture a::before {
     content: "";
     width: 18px;
     height: 13px;
     position: absolute;
     top: 50%;
-    left: -10px;
+    left: 5px;
     background: url(../img_/sprite.png);
     transform: translateY(-50%);
 }
@@ -128,15 +155,13 @@ h1 {
 
 .main-service {
     display: flex;
-    width: 750px;
     margin: 0;
     padding: 0;
 }
 
 .main-service a {
-    border-left: 1px solid #3f4852;
     border-right: 1px solid #3f4852;
-    padding: 11.5px 15px;
+    padding: 11.5px 30px;
 }
 
 .networks {
@@ -144,6 +169,10 @@ h1 {
     justify-content: space-between;
     align-items: center;
     width: 96px;
+}
+
+.networks li {
+    display: inline-block;
 }
 
 .networks a {
@@ -157,6 +186,18 @@ a.inst:hover {
     background-position-y: -18px;
 }
 
+.networks li:nth-child(1) {
+    height: 18px;
+}
+
+.networks li:nth-child(2) {
+    height: 14px;
+}
+
+.networks li:nth-child(3) {
+    height: 14px;
+}
+
 a.fb {
     width: 9px;
     height: 18px;
@@ -165,7 +206,7 @@ a.fb {
 
 a.tw {
     width: 16px;
-    height: 16px;
+    height: 14px;
     background-position: -32px 0;
 }
 
@@ -182,7 +223,6 @@ ul ul:hover {
 
 ul ul {
     display: none;
-    content: "";
     position: absolute;
     z-index: 1;
     top: calc(100% + 5px);
@@ -190,7 +230,6 @@ ul ul {
     background-color: #d2d4d5;
     width: 210px;
     border-radius: 3px;
-    
 }
 
 ul ul::before {
@@ -200,21 +239,22 @@ ul ul::before {
     left: 0;
     width: 100%;
     height: 5px;
-    padding-right: 30px;
-}
-
-.navigation a:hover {
-    color: #ff8505;
 }
 
 ul ul li {
     display: block;
-    width: 100%;
 }
 
-ul ul a {
-    width: 100%;
-    color: #2a3644;
+.open a {
+    text-align: left;
+}
+
+.open li:first-child a {
+    border-radius: 3px 3px 0 0;
+}
+
+.open li:last-child a {
+    border-radius: 0 0 3px 3px;
 }
 
 .service {
@@ -241,6 +281,29 @@ ul ul a {
     width: unset;
 }
 
+.service li:first-child a,
+.service li:first-child {
+    border-radius: 3px 0 0 0;
+}
+
+.service li:nth-child(4) a,
+.service li:nth-child(4) {
+    border-radius: 0 0 0 3px;
+}
+
+.service li:nth-child(5) a,
+.service li:nth-child(5) {
+    border-radius: 0 3px 0 0;
+}
+
+.service li:last-child a {
+    border-radius: 0;
+}
+
+.service li:hover {
+    border-color: #2a3644;
+}
+
 .service li:not(:nth-child(1n+5)) a {
     border-left: none;
 }
@@ -257,97 +320,31 @@ ul ul a {
     border-top: none;
 }
 
-.neighborhood {
-    display: none;
-    position: absolute;
-    z-index: 1;
-    top: calc(100% + 5px);
-    left: 0;
-    background-color: #d2d4d5;
-    width: 210px;
-    border-radius: 3px;
-}
-
-.neighborhood a {
-    color: #2a3644;
-    width: 210px;
+.open_8 a {
     border: 1px solid #b9bdc1;
 }
 
 .open-1 {
-    display: none;
-    content: "";
-    position: absolute;
-    z-index: 1;
     right: 0;
     left: unset;
-    top: calc(100% + 5px);
-}
-
-.open-1 {
-    background-color: #d2d4d5;
-}
-
-.open-1 a:hover {
-    color: #ff8505;
-}
-
-.open-1 a {
-    color: #2a3644;
-    width: 210px;
-    border-radius: 3px;
 }
 
 li {
     position: relative;
 }
 
-.open_5 {
-    display: none;
-    content: "";
-    position: absolute;
-    z-index: 1;
-    top: calc(100% + 5px);
-    margin: 0;
-    padding: 0;
-}
-
-.open_5 {
-    background-color: #d2d4d5;
-}
-
-.open_5 a:hover {
-    color: #ff8505;
-}
-
-.open_5 a {
-    color: #2a3644;
-    width: 210px;
-    border-radius: 3px;
-}
-
 .open_6 {
-    display: none;
-    content: "";
-    position: absolute;
     top: 0;
-    z-index: 1;
     left: calc(100% + 5px);
 }
 
-.open_6 {
-    background-color: #d2d4d5;
-}
-
-.open_6 a:hover {
-    color: #ff8505;
-    background-color: #2a3644;
-}
-
-.open_6 a {
-    color: #2a3644;
-    width: 210px;
-    border-radius: 3px;
+.open_6::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -5px;
+    width: 5px;
+    height: 100%;
 }
 
 .carde a {
@@ -355,28 +352,19 @@ li {
 }
 
 .open_7 {
-    display: none;
-    content: "";
-    position: absolute;
-    z-index: 1;
     top: 0;
     right: calc(100% + 5px);
     left: unset;
 }
 
-.open_7 {
-    background-color: #d2d4d5;
-}
-
-.open_7 a:hover {
-    color: #ff8505;
-    background-color: #2a3644;
-}
-
-.open_7 a {
-    color: #2a3644;
-    width: 210px;
-    border-radius: 3px;
+.open_7::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -5px;
+    width: 5px;
+    height: 100%;
+    left: unset;
 }
 
 h2 {
@@ -392,7 +380,7 @@ thead {
 }
 
 thead th {
-    padding: 24px;
+    padding: 18px 25px;
 }
 
 td:nth-child(2) {
@@ -414,6 +402,7 @@ thead tr {
 table {
     border-collapse: collapse;
     width: 100%;
+    margin-bottom: 50px;
 }
 
 table th {
@@ -462,7 +451,8 @@ td:last-child {
     border-right: none;
 }
 
-tr:last-child td {
+tr:last-child td,
+.row:last-child p {
     border-bottom: none;
 }
 
@@ -471,18 +461,19 @@ h3 {
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #bfbfbf;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .row p {
     display: table-cell;
-    border: 1px solid #3f4852;
+    border: 1px solid #c0c1c2;
 }
 
 .table-style {
     display: table;
     width: 100%;
     border-collapse: collapse;
+    margin-bottom: 50px;
 }
 
 .center {
@@ -495,10 +486,7 @@ h3 {
 
 .table-style .row:first-child p {
     color: #fff;
-}
-
-.table-style .row:not(:first-child):hover {
-    background-color: #c0c1c2;
+    border: 1px solid #3f4852;
 }
 
 .row .cell {
@@ -535,6 +523,7 @@ td:nth-child(1n+3) {
 
 .table-style .row:not(:first-child):hover p {
     border-color: transparent;
+    background-color: #c0c1c2;
 }
 
 .row:not(:first-child):nth-child(2n) {
@@ -548,12 +537,4 @@ p:first-child {
 
 p:last-child {
     border-right: none;
-}
-
-.row:last-child p {
-    border-bottom: none;
-}
-
-.row:not(:first-child):hover {
-    border: transparent;
 }
